--- a/hr_dc_extend/views/hr_contract_view.xml
+++ b/hr_dc_extend/views/hr_contract_view.xml
@@ -5,9 +5,15 @@
             <field name="name">HR Contract Inherit 1</field>
             <field name="model">hr.contract</field>
             <field name="inherit_id" ref="hr_contract.hr_contract_view_form"/>
-            <field name="arch" type="xml">
-                <field name="wage" position="after">
-                    <field name="salary_per_h"/>                    
+            <field name="arch" type="xml">                
+                <field name="wage" position="replace">
+                    <field name="fixed_salary"/>
+                    <field name="wage"
+                        attrs="{'invisible': [('fixed_salary', '=', False)]}"
+                    />
+                    <field name="salary_per_h"
+                        attrs="{'invisible': [('fixed_salary', '=', True)], 'required': [('fixed_salary', '=', False)]}"
+                    />                    
                 </field>
                 <separator string="Notes" position="before">
                     <group string="Arrive to UK">
