--- a/crm_dc_extend/views/res_partner_view.xml
+++ b/crm_dc_extend/views/res_partner_view.xml
@@ -10,6 +10,10 @@
                     <field name="nationality_id" 
                         attrs="{'invisible': [('is_company', '=', True)]}"
                     />
+                    <label for="attention"/>
+                    <span style="color:red">
+                        <field name="attention"/>
+                    </span>
                 </field>                                              
             </field>
         </record>     
