Added access rights for res.partner.address_archive

--- a/crm_dc_extend/views/res_partner_view.xml
+++ b/crm_dc_extend/views/res_partner_view.xml
@@ -59,6 +59,9 @@
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base.view_partner_form"/>
             <field name="arch" type="xml">
+                <field name="zip" position="attributes">
+                    <attribute name="placeholder">Post Code</attribute>
+                </field>
                 <field name="title" position="after">
                     <field name="nationality_id" 
                         attrs="{'invisible': [('is_company', '=', True)]}"
@@ -67,6 +70,11 @@
                     <span style="color:red">
                         <field name="attention"/>
                     </span>
+                </field>
+                <field name="country_id" position="after">
+                    <field name="address_description"
+                        placeholder="Address Description"
+                    />
                 </field>
                 <page string="Accounting" position="before">
                     <page String="Addresses Archive">
