--- a/crm_dc_extend/views/res_partner_view.xml
+++ b/crm_dc_extend/views/res_partner_view.xml
@@ -100,6 +100,9 @@
                 </field>
                 <page string="Accounting" position="before">
                     <page String="Addresses Archive">
+                        <button name="init_archive" string="Init Archive" 
+                            type="object" class="oe_highlight"
+                        />
                         <field name="address_archive_ids"/>
                     <!--
                         <tree string="Addresses" editable="bottom">
