Added house info and removes "current" field constraint

--- a/crm_dc_extend/views/res_partner_view.xml
+++ b/crm_dc_extend/views/res_partner_view.xml
@@ -100,6 +100,24 @@
                     />
                 </field>
                 <page string="Accounting" position="before">
+                    <page string="House Info">
+                        <group>
+                            <group string="Keys">
+                                <field name="have_key"/>
+                                <field name="key_numb"
+                                    attrs="{'invisible': [('have_key', '=', False)]}"
+                                />
+                                <field name="key_left"/>
+                                <field name="where_key"
+                                    attrs="{'invisible': [('key_left', '=', False)]}"
+                                />
+                            </group>
+                            <group string="Alarm">
+                                <field name="house_alarm"/>
+                                <field name="gate_alarm"/>
+                            </group>
+                        </group>
+                    </page>
                     <page String="Addresses Archive">
                         <button name="init_archive" string="Init Archive" 
                             type="object" class="oe_highlight"
