Added relevant fields for DC in crm.lead views

--- a/crm_dc_extend/views/crm_lead_view.xml
+++ b/crm_dc_extend/views/crm_lead_view.xml
@@ -5,7 +5,32 @@
             <field name="name">CRM Lead Form - Inherit</field>
             <field name="model">crm.lead</field>
             <field name="inherit_id" ref="crm.crm_case_form_view_leads"/>
-            <field name="arch" type="xml">
+            <field name="arch" type="xml"> 
+                <field name="street2" position="after">
+                    <div class="oe_inline">
+                        <field name="eyre" style="width: 35%%"
+                            placeholder="Eyre"
+                        />
+                        <field name="apartment_complex" style="width: 35%%"
+                            placeholder="Apt. Complx."
+                        />
+                        <field name="house_name" style="width: 30%%"
+                            placeholder="HS Name"
+                        />
+                    </div>
+                </field>
+                <field name="zip" position="attributes">
+                    <attribute name="placeholder">Post Code</attribute>
+                </field>                
+                <field name="country_id" position="after">
+                    <field name="address_description"
+                        placeholder="Address Description"
+                    />
+                </field>   
+                <field name="function" position="before">
+                    <field name="nationality_id" 
+                    />
+                </field>                                            
                 <page string="Internal Notes" position="after">
                     <page string="Cleaning Info">
                         <group>
@@ -35,6 +60,31 @@
             <field name="model">crm.lead</field>
             <field name="inherit_id" ref="crm.crm_case_form_view_oppor"/>
             <field name="arch" type="xml">
+                <field name="street2" position="after">
+                    <div class="oe_inline">
+                        <field name="eyre" style="width: 35%%"
+                            placeholder="Eyre"
+                        />
+                        <field name="apartment_complex" style="width: 35%%"
+                            placeholder="Apt. Complx."
+                        />
+                        <field name="house_name" style="width: 30%%"
+                            placeholder="HS Name"
+                        />
+                    </div>
+                </field>
+                <field name="zip" position="attributes">
+                    <attribute name="placeholder">Post Code</attribute>
+                </field>                
+                <field name="country_id" position="after">
+                    <field name="address_description"
+                        placeholder="Address Description"
+                    />
+                </field>   
+                <field name="function" position="before">
+                    <field name="nationality_id" 
+                    />
+                </field>                        
                 <page string="Internal Notes" position="after">
                     <page string="Cleaning Info">
                         <group>
