--- a/hr_dc_extend/views/hr_view.xml
+++ b/hr_dc_extend/views/hr_view.xml
@@ -7,12 +7,15 @@
             <field name="inherit_id" ref="hr.view_employee_form"/>
             <field name="arch" type="xml">
                 <field name="identification_id" position="after">
-                    <field name="id_copy" />
+                    <field name="id_copy" filename="id_copy_fname"/>
                     <field name="nin"/>
-                </field>
+                </field>                       
+                <field name="bank_account_id" position="attributes">   <!-- TODO why on_change attribute do not add-->             
+                    <atrribute name="on_change">onchange_bank_account_id(bank_account_id)</atrribute>                                    
+                </field> 
                 <field name="bank_account_id" position="after">
-                    <field name="sort_code"/>                    
-                </field>
+                    <field name="sort_code"/>
+                </field>               
                 <field name="address_home_id" position="after">
                     <field name="address_lt_id"
                         domain="[('country_id.code', '=', 'LT')]"
