--- a/calendar_service/views/calendar_service_view.xml
+++ b/calendar_service/views/calendar_service_view.xml
@@ -24,18 +24,34 @@
             <field name="priority">5</field>
             <field name="arch" type="xml">
                 <form string="Service Work">
-                    <group>
+                    <sheet>
+                        <div class="oe_title">
+                            <label for="name" class="oe_edit_only"/>
+                            <h1><field name="name"/></h1>                            
+                        </div>
                         <group>
-                            <field name="name"/>
-                            <field name="employee_id"/>
-                            <field name="description"/>
+                            <group>
+                                <field name="start_time"/>
+                                <field name="end_time"/> 
+                                <field name="employee_id"/>                                
+                                <field name="duration"/>                                                               
+                            </group>
+                            <group>
+                                <field name="partner_id"
+                                    onchange="onchange_partner_id()"
+                                />
+                                <field name="address_archive_id"/>
+                            </group>
                         </group>
-                        <group>
-                            <field name="start_time"/>
-                            <field name="end_time"/>
-                            <field name="note"/>
-                        </group>
-                    </group>
+                        <group string="Additional Info">
+                            <group>
+                                <field name="description"/>
+                            </group>
+                            <group>
+                                <field name="note"/>
+                            </group> 
+                        </group>                       
+                    </sheet>
                 </form>
             </field>
         </record>
@@ -45,10 +61,10 @@
             <field name="model">calendar.service.work</field>
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
-                <calendar string="Service Works" date_start="start_time" color="employee_id" date_stop="end_time" date_delay="duration">
+                <calendar string="Service Works" date_start="start_time" color="employee_id" date_stop="end_time" mode="week">
                     <field name="name"/>
-                    <field name="employee_id" style="font-weight: bold"/>
-                </calendar>
+                    <field name="employee_id"/>                                                     
+                </calendar>                
             </field>
         </record>        
         <record id="action_calendar_service_work" model="ir.actions.act_window">
@@ -64,6 +80,6 @@
             </field>
         </record>   
 
-        <menuitem name="Service Calendar Work" id="menu_calendar_service_work" parent="base.menu_sales" sequence="4" action="action_calendar_service_work"/>                    
+        <menuitem name="Service Works" id="menu_calendar_service_work" parent="base.menu_sales" sequence="4" action="action_calendar_service_work"/>                    
     </data>
 </openerp>
